# s-black-harness-engineering

./: .gitignore  AGENTS.md  README.en.md  README.md  pyproject.toml
.githooks/: pre-commit
adapters/: adapter.schema.json  adapters.sample.json  execution-envelope.examples.json  execution-envelope.schema.json  execution-readiness.sample.json  execution-readiness.schema.json  execution-trust-binding.schema.json
agent_runtime/: __init__.py  __main__.py  adapter_approval.py  adapter_gate.py  adapter_plan.py  adapter_registry.py  adapter_response.py  adapter_validation.py  cli.py  docs_context.py  doctor.py  execution_audit_writer.py  execution_trust.py  fixed_process_runner.py  git_repository_guard.py  git_status_porcelain.py  ledger_consistency.py  loader.py  orchestration_adapter.py  orchestration_approval.py  orchestration_approval_resolve.py  orchestration_artifact.py  orchestration_contract.py  orchestration_contract_check.py  orchestration_control_panel.py  orchestration_execution_readiness.py  orchestration_git_status_execution.py  orchestration_overview.py  orchestration_preflight.py  orchestration_profile.py  orchestration_read_loop_snapshot.py  orchestration_recovery.py  orchestration_replay.py  orchestration_report.py  orchestration_route.py  orchestration_routing_snapshot.py  orchestration_run.py  orchestration_run_commit.py  orchestration_run_dry_run.py  orchestration_task_submit.py  (+17 more)
agents/: agents.sample.json  agents.schema.json
automation/: automation-profiles.sample.json  automation-profiles.schema.json
cli/: commands.sample.json
(+307 files in other folders)
